fix letter-spacing

--- a/css/its-a-library-thing.css
+++ b/css/its-a-library-thing.css
@@ -48,7 +48,7 @@ main {
     font-weight: bold;
     font-size: 2rem;
     text-transform: uppercase;
-    letter-spacing: .1rem;
+    /* letter-spacing: .1rem; */
 }
 
 #bio p {
@@ -65,9 +65,9 @@ main {
     border: 1px solid black; */
 }
 
-.progetto img {
-    /* border-radius: 2px; */
-}
+/* .progetto img {
+    border-radius: 2px;
+} */
 
 .progetto[data-tipo=libro] img {
     /* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; */
